--- a/scss/page/timeshift.scss
+++ b/scss/page/timeshift.scss
@@ -29,6 +29,9 @@
     border-bottom: 1px solid black;
     padding: .2rem;
 }
+.ts-row:last-child {
+    border-bottom: none;
+}
 .ts-left {
     width: 33%;
     float: left;
