--- a/scss/utils/layout.scss
+++ b/scss/utils/layout.scss
@@ -28,7 +28,7 @@
 .page-footer {}
 
 @media (min-width: 968px) {
-    .page-layout {
+    .content-wrapper {
         margin-left: 10%;
         margin-right: 10%;
         width: auto;
@@ -43,7 +43,7 @@
     }
 }
 @media (min-width:1748px) {
-    .page-layout {
+    .content-wrapper {
         margin-left: 20%;
         margin-right: 20%;
     }
